--- a/Torch_PrivacyPolicy.html
+++ b/Torch_PrivacyPolicy.html
@@ -35,7 +35,7 @@
 <p><strong>Effective Date:</strong> January 1, 2026</p>
 
 <p>
-Simple Torch Light ("we", "our", or "us") operates the Simple Torch Light mobile application.
+Simple Torch Light , we operates the Simple Torch Light mobile application.
 This page informs users about our policies regarding the collection, use, and disclosure of
 information when using our application.
 </p>
@@ -80,7 +80,7 @@ If you have any questions or concerns about this Privacy Policy, you can contact
 </p>
 
 <p>
-<strong>Email:</strong> your-email@example.com
+<strong>Email:</strong> pragadeesh.m.1608@gmail.com
 </p>
 
 <footer>
