--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ If you have any questions or concerns about this Privacy Policy, you can contact
 </p>
 
 <footer>
-    <p>© 2026 Simple Torch Light. All rights reserved.</p>
+    <p>© 2026 Simple Torch Light. <mark>All rights reserved.</mark></p>
 </footer>
 
 </body>
